[package]
name = "device_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.8"
chrono = "0.4.38"
uuid = "1.10.0"

[lib]
name = "device_mapper"
path = "src/lib.rs"


[[bin]]
name = "md"
path = "src/main.rs"

[dev-dependencies]
flate2 = "1.0.31"
