[package]
name = "device_mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.8"
chrono = "0.4.38"
ioctl-rs = "0.2.0"
ioctl-sys = "0.8.0"
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
name = "device_mapper"
path = "src/lib.rs"
build = "build.rs"

[[bin]]
name = "md"
path = "src/main.rs"

[dev-dependencies]
flate2 = "1.0.31"

[build-dependencies]
bindgen = "0.70.1"
